Code changes to run in iDempiere 7.1